--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/mo.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/mo.jpeg" style="width:416px; height: 312px;" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/mo.jpeg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -402,7 +402,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/mo.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/mo.jpeg" style="width:416px; height: 312px;" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/mo.jpeg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -412,7 +412,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/mo.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/mo.jpeg" style="width:416px; height: 312px;" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/mo.jpeg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -422,7 +422,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/mo.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/mo.jpeg" style="width:416px; height: 312px;" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/mo.jpeg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -432,7 +432,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/mo.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/mo.jpeg" style="width:416px; height: 312px;" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/mo.jpeg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -442,7 +442,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/mo.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/mo.jpeg" style="width:416px; height: 312px;" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/mo.jpeg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -452,7 +452,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/mo.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/mo.jpeg" style="width:416px; height: 312px;" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/mo.jpeg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -462,9 +462,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/mo.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/mo.jpeg" style="width:416px; height: 312px;" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/mo.jpeg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/mo.jpeg"  data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -607,7 +607,8 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Thank you for your valuable time. you always reachable on my email and phone number.
+          </p>
         </div>
 
         <div class="row" data-aos="fade-in">
@@ -617,19 +618,19 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Cairo, Egypt</p>
               </div>
 
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>m.fayez.radwan@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+20 127 393 8259</p>
               </div>
 
               <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
