--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -96,18 +96,18 @@
         <div class="portfolio-details-container">
 
           <div class="owl-carousel portfolio-details-carousel">
-            <img src="assets/img/portfolio/portfolio-details-1.jpg" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/portfolio-details-2.jpg" class="img-fluid" alt="">
-            <img src="assets/img/portfolio/portfolio-details-3.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/1.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/5.jpg" class="img-fluid" alt="">
           </div>
 
           <div class="portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web design</li>
-              <li><strong>Client</strong>: ASU Company</li>
-              <li><strong>Project date</strong>: 01 March, 2020</li>
-              <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+              <li><strong>Category</strong>: Web Developer</li>
+              <li><strong>Client</strong>: Blue Technology</li>
+              <li><strong>Project date</strong>: 01 January, 2021</li>
+              <li><strong>Project URL</strong>: <a href="https://blue-egypt.com/en">blue-egypt</a></li>
             </ul>
           </div>
 
@@ -116,8 +116,7 @@
         <div class="portfolio-description">
           <h2>This is an example of portfolio detail</h2>
           <p>
-            Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-          </p>
+            شركة بلو تكنولوجي ، شركة blue technology  ، blue technology  ، برامج محاسبة ، برامج حسابات ، برامج محاسبية ، تصميم مواقع ، شركة تصميم مواقع ، شركة تصميم مواقع فى مصر ، شركات تصميم مواقع ، افضل شركة تصميم مواقع ، شركة تسويق الكترونى ، أفضل شركة تسويق الكترونى فى مصر ، شركة برمجة ، شركات برمجة ، شركات برامج محاسبة ،  برامج ادارة المحلات التجارية ، برنامج ادارة المدارس ، برنامج ادارة العيادات ، شركة تسويق الكترونى فى مصر ، شركة برمجيات ، تسويق الكترونى ، برمجة ، تطوير مواقع   </p>
         </div>
 
       </div>
